movie_app/src/app/background.css
.navi {
    background-image: url('../../images/background.jpg');
}

.brand {

    background: -webkit-linear-gradient(#4880EC, #019CAD);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

